# matice

./: CMakeLists.txt  matice123.cpp
matice/: CMakeLists.txt  matice.h
